# finance-analytics-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  workspace.yaml
.github/workflows/: ci.yaml  ci.yml
credentials/: .gitkeep
data/dagster_home/: dagster.yaml
data/dagster_home/.telemetry/: id.yaml
data/dagster_home/storage/187a44dc-1808-4ae3-91d8-dc8d095e3636/compute_logs/: dshslzjv.err  ijwwfyse.err  izsfjpwo.err  pzhnsbho.err  rwxvfwhd.err
data/dagster_home/storage/251d76ef-944f-4a67-af5a-66b4a9beaf8e/compute_logs/: fzvgwsbm.err  wshgcogs.err  xuljdojy.err
data/dagster_home/storage/48333f01-7233-4a4c-9ddb-974a92885cc8/compute_logs/: desscjtv.err  dptzuomt.err
data/dagster_home/storage/ca77a9f6-f263-484f-81d8-90a4245dd80d/compute_logs/: kvuocykb.err
data/dagster_home/storage/f1a63617-5bed-4264-94df-64419c7a5853/compute_logs/: lwicclej.err  vbwztsrh.err
docs/: mkdocs.yml
docs/docs/: architecture.md  data-model.md  diagrams.md  index.md  runbook.md
export/tests/: test_latest_csv_contract.py  test_snapshot_values.py
infra/: Dockerfile
orchestration/: __init__.py  assets_export_csv.py  assets_export_sheets.py  assets_ingest.py  assets_maintenance.py  assets_quality_ge.py  assets_transform_dbt.py  repo.py
orchestration/config/: sources.yml
orchestration/dagster_project/: workspace.yaml
orchestration/dagster_project/src/: __init__.py  assets_export_csv.py  assets_export_sheets.py  assets_ingest.py  assets_ingest_duckdb.py  assets_maintenance.py  assets_quality_ge.py  assets_transform_dbt.py  repo.py
quality/great_expectations/: great_expectations.yml
quality/gx/expectations/: .ge_store_backend_id
sample_data/: events_sample.csv  inventory_2025-09-01.csv  sales_2025-09-01.csv  t_bank_transactions.csv
scripts/: backfill_range.py  docker-build-info.sh  seed_sample_data.sh
src/: __init__.py  db.py  duckdb_utils.py  google_sheets.py  utils.py
tests/: __init__.py  conftest.py  constants.py
tests/dagster/: test_assets_export_csv.py  test_assets_export_sheets.py  test_assets_ingest.py  test_assets_quality_ge.py  test_assets_transform_dbt.py
tests/e2e/: test_pipeline.py
tests/fixtures/: sample_data.py
tests/integration/: conftest.py  test_data_quality.py  test_integration.py  test_snapshot_values.py
tests/unit/: test_duckdb_utils.py  test_google_sheets.py  test_utilities.py
transform/: dbt_project.yml  packages.yml  profiles.yml  schema.yml
transform/dbt/: .user.yml  dbt_project.yml  packages.yml
transform/dbt/macros/: _assertions.sql  get_stg_columns_list_map.sql
transform/dbt/models/core/t_bank/: core_load_t_bank_transactions.sql  core_load_t_bank_transactions.yml
transform/dbt/models/integration_marts/: imart_bind_bank_transactions.sql  imart_bind_bank_transactions.yml
transform/dbt/models/marts/: mart_load_t_bank_transactions.sql  mart_load_t_bank_transactions.yml
transform/dbt/models/staging/t_bank/: _sources.yml  stg_load_t_bank_transactions.sql  stg_load_t_bank_transactions.yml
transform/dbt/profiles/: .user.yml  profiles-ci.yml  profiles.yml
transform/macros/: _assertions.sql  table_naming.sql
transform/models/_sources/: raw.yml
transform/models/core/: core_events.sql  core_load_t_bank_transactions.sql  core_load_t_bank_transactions.yml  core_t_bank_transactions.sql
transform/models/integration_marts/: imart_bind_bank_transactions.sql  imart_bind_bank_transactions.yml
transform/models/marts/: daily_snapshot.sql  mart_load_t_bank_transactions.sql  mart_load_t_bank_transactions.yml
transform/models/staging/: staging_events.sql  stg_load_t_bank_transactions.yml  stg_t_bank_transactions.sql  stg_t_bank_transactions.yml
transform/seeds/mappings/: transactions_column_map.csv
